bunch of schema updates
