# public/swagger/v3/swagger.json
@@ -2,8 +2,17 @@
     "openapi": "3.0.0",
     "info": {
         "title": "AuAPI",
-        "version": "1.1"
+        "license": {
+            "name": "MIT"
+        },
+        "version": "0.2.0"
     },
+    "servers": [
+        {
+            "url": "api.austation.net",
+            "description": "AuStation API"
+        }
+    ],
     "paths": {
         "/version": {
             "get": {
@@ -25,7 +34,14 @@
                         }
                     },
                     "500": {
-                        "description": "Server error"
+                        "description": "Server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/error"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -62,10 +78,24 @@
                         }
                     },
                     "404": {
-                        "description": "Server ID doesn't exist"
+                        "description": "Server ID doesn't exist",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/error"
+                                }
+                            }
+                        }
                     },
                     "500": {
-                        "description": "Server error"
+                        "description": "Server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/error"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -105,10 +135,24 @@
                         }
                     },
                     "404": {
-                        "description": "Server ID doesn't exist"
+                        "description": "Server ID doesn't exist",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/error"
+                                }
+                            }
+                        }
                     },
                     "500": {
-                        "description": "Server error"
+                        "description": "Server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/error"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -136,7 +180,14 @@
                         }
                     },
                     "500": {
-                        "description": "Server error"
+                        "description": "Server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/error"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -144,23 +195,6 @@
     },
     "components": {
         "schemas": {
-            "server": {
-                "properties": {
-                    "name": {
-                        "description": "Name of the server",
-                        "type": "string"
-                    },
-                    "ip": {
-                        "description": "IP address of the server",
-                        "type": "string"
-                    },
-                    "port": {
-                        "description": "Port the server is bound to",
-                        "type": "integer"
-                    }
-                },
-                "type": "object"
-            },
             "status": {
                 "properties": {
                     "version": {
@@ -279,9 +313,42 @@
                 "type": "object"
             },
             "version": {
+                "required": [
+                    "version"
+                ],
                 "properties": {
                     "version": {
-                        "description": "Current version of the API",
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "server": {
+                "required": [
+                    "name",
+                    "ip",
+                    "port"
+                ],
+                "properties": {
+                    "name": {
+                        "type": "string"
+                    },
+                    "ip": {
+                        "type": "string"
+                    },
+                    "port": {
+                        "type": "number",
+                        "format": "int32"
+                    }
+                },
+                "type": "object"
+            },
+            "error": {
+                "required": [
+                    "error"
+                ],
+                "properties": {
+                    "error": {
                         "type": "string"
                     }
                 },
